--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -17,6 +17,10 @@
     --input-bg-color: #dddddd;
 }
 
+* {
+    caret-color: var(--card-border-color);
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -70,7 +74,7 @@ body {
     color: var(--card-bg-color);
     -webkit-text-stroke: 2px var(--main-text-color);
     font-size: 4.5em;
-    margin: 6% 0% 3% 0%;
+    margin: 90px 0% 50px 0%;
     text-align: center;
 }
 
@@ -102,7 +106,6 @@ body {
     grid-template-rows: repeat(3, 1fr);
     column-gap: 20px;
     height: 340px;
-    padding-top: 2%;
 }
 
 .contact-form-inputs {
@@ -130,22 +133,20 @@ body {
     overflow: visible !important;
 }
 
-#contact-send-form-btn {
-    margin: 0 auto 0 auto;
-    width: 120px;
+.contact-form-btn {
+    width: 100%;
     height: 40px;
     border-radius: 5px;
     border: 2px solid var(--card-border-color);
     background: var(--input-bg-color);
     filter: drop-shadow(4px 4px var(--card-shadow-color));
-    font-size: 1.1em;
+    font-size: 1em;
     color: #323232;
     cursor: pointer;
-    grid-column: span 3;
     overflow: visible;
 }
 
-#contact-send-form-btn:active {
+.contact-form-btn:active {
     filter: drop-shadow(0px 0px var(--card-shadow-color));
     transform: translate(3px, 3px);
 }
@@ -154,8 +155,19 @@ body {
     grid-column: span 3;
     resize: none;
     width: 100%;
-    margin: 3% 0 2%;
-    height: 210px;
+    margin: 3% 0 3%;
+    height: 220px;
     padding: 10px;
     line-height: 1.1;
+}
+
+#form-submit-status {
+    width: 100%;
+    border: 0px solid var(--card-border-color);
+    background: #ffffff00;
+    text-align: center;
+    color: var(--important-normal-text-color);
+    font-size: 1em;
+    pointer-events: none;
+    overflow: visible;
 }
