--- a/static/css/index.css
+++ b/static/css/index.css
@@ -120,11 +120,11 @@ body {
 
 .home-social-icon {
     margin: 1% 2% 1% 0%;
-    transition: transform 0.1s ease;
+    transition: all 0.2s ease;
 }
 
 #home-cv-logo-img {
-    transition: transform 0.1s ease;
+    transition: all 0.2s ease;
     width: 45px;
     transform: translateY(0.23em);
     margin-left: -0.5%;
@@ -132,8 +132,10 @@ body {
 
 .home-social-icon:hover {
     transform: translateY(-0.1em);
+    filter: drop-shadow(0px 5px var(--card-shadow-color));
 }
 
 #home-cv-logo-img:hover {
+    filter: drop-shadow(0px 5px var(--card-shadow-color));
     transform: translateY(-0em);
 }
