--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -37,6 +37,7 @@ body {
     justify-content: center;
     align-items: center;
     border-top: 1px solid var(--card-border-color);
+    z-index: 1;
 }
 
 #projects-nav-bar {
