--- a/static/css/index.css
+++ b/static/css/index.css
@@ -139,3 +139,39 @@ body {
     filter: drop-shadow(0px 5px var(--card-shadow-color));
     transform: translateY(-0em);
 }
+
+.home-nav-bar-btn-tooltip {
+    width: max-content;
+    padding: 0 5px;
+    height: 30px;
+    font-size: 0.6em;
+    background-color: var(--third-bg-color);
+    color: var(--main-text-color);
+    text-align: center;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid var(--card-border-color);
+    position: absolute;
+    z-index: 1;
+    top: 2px;
+    left: 134%;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.7s;
+}
+
+.home-nav-bar-btn-tooltip::after {
+    content: "";
+    position: absolute;
+    right: 100%;
+    border-width: 6px;
+    border-style: solid;
+    border-color: transparent var(--card-border-color) transparent transparent;
+}
+
+.home-nav-bar-btn:hover .home-nav-bar-btn-tooltip {
+    visibility: visible;
+    opacity: 1;
+}
